[feat] common exception 추가
